styled results-empty

--- a/src/app/mortage/mortgage-results/mortgage-results.component.html
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.html
@@ -38,18 +38,20 @@
    </div>
 }
 @else if (!isResults){
+    <div class="results-empty-container">
 
-    <div>
-        <img src="../../../assets/images/illustration-empty.svg" alt="">
+        <div>
+            <img src="../../../assets/images/illustration-empty.svg" alt="">
+        </div>
+        <header class="header-container">
+            <h1 class="results-header-text"> Results shown here</h1>
+        </header>
+        <div class="results-info-div">
+            <p class="results-empty-info">
+                Complete the form and click "calculate repayments" to see what your monthly repayments would be.
+            </p>
+        </div>
     </div>
-    <header class="header-container">
-        <h1 class="results-header-text"> Results shown here</h1>
-    </header>
-    <div class="results-info-div">
-        <p class="results-info">
-           Complete the form and click "calculate repayments" to see what your monthly repayments would be.
-        </p>
-       </div>
 }
 
 </section>
