--- a/src/app/mortage/mortage-form/mortage-form.component.css
+++ b/src/app/mortage/mortage-form/mortage-form.component.css
@@ -219,7 +219,7 @@ input[type='radio'] {
     height: 8px;
     border-radius: 80%;
     outline: none;
-    border: 3px solid gray;
+    border: 3px solid #ffffff;
     margin: 6px;
 
 }
