--- a/src/app/mortage/mortgage-results/mortgage-results.component.css
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.css
@@ -68,7 +68,25 @@
 .results-payment{
     /* border: 5px solid blue; */
 }
+.results-empty-container{
+    overflow: none;
 
+    padding:1em 2em; 
+    background-color: hsl(202, 55%, 16%);
+    display: flex;
+    flex-direction: column;
+    
+    justify-content: center;
+    align-items: center;
+}
+.results-empty-info{
+    max-width: 700px;
+    color:hsl(200, 26%, 54%);
+    font-weight: 500;
+    font-size: 3.5vw;
+text-align: center;
+
+}
 @media only screen and (min-width:668px) 
 {
     .container{
