added error template for loan type input

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -102,6 +102,10 @@
           Interest Only
       
       </div>
+      @if(form.controls.m_type.invalid && (form.controls.m_type.dirty || form.controls.m_type.touched)){
+
+        <div  [ngClass]="{'errorMessage': form.controls.m_type.invalid && (form.controls.m_type.dirty || form.controls.m_type.touched)}"> {{ this.getErrorMessage(this.form.controls.m_type)}}</div>
+      }
     </label>
     </div>
     <div class="form-group submit-container">
