added frontend mentor tag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-mortage></app-mortage>
+
+
+    <app-mortage></app-mortage>
+    <div class="footer-section">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> |  
+        <a href="https://github.com/Suganya1990?tab=repositories" target="_blank">Git Hub Repo</a> 
+    </div>
