--- a/src/app/mortage/mortgage-results/mortgage-results.component.css
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.css
@@ -83,7 +83,7 @@
     max-width: 700px;
     color:hsl(200, 26%, 54%);
     font-weight: 500;
-    font-size: 16px;
+    font-size: px;
 text-align: center;
 
 }
