--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
     <app-mortage></app-mortage>
-    <div class="footer-section">
+    <div class="footer-section" role="footer">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> |  
         <a href="https://github.com/Suganya1990/MortgageCalculator" target="_blank">Git Hub Repo</a> 
     </div>
