--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <header class="header-container">
+  <header class="header-container" role="form-header">
     <h1 class="header-text">Mortgage Calculator</h1>
     <a class="button-clear" (click)="resetForm()" href="">Clear All</a>
   </header>
