--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -1,10 +1,10 @@
-<section class="container">
+<section class="container"  role="form">
   <header class="header-container" role="form-header">
     <h1 class="header-text">Mortgage Calculator</h1>
     <a class="button-clear" (click)="resetForm()" href="">Clear All</a>
   </header>
 
-  <form class="mortgage-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <form class="mortgage-form" [formGroup]="form" (ngSubmit)="onSubmit()" role="mortgage-input">
     <div class=" form-group">
       
       <label for="amount" class="form-group-label">
@@ -111,7 +111,7 @@
     </label>
     </div>
     <div class="form-group submit-container">
-      <button [disabled]="disableSubmit() " type="submit" class="mortgage-submit">
+      <button [disabled]="disableSubmit() " type="submit" class="mortgage-submit" role="mortgage-submit">
         <img src="../../../assets/images/iconCalculator.svg" alt="">Calculate Repayment
       </button>
     </div>
