--- a/src/app/mortage/mortgage-results/mortgage-results.component.html
+++ b/src/app/mortage/mortgage-results/mortgage-results.component.html
@@ -1,4 +1,4 @@
-<section class="container" role="mortgage-calculation-results">
+<section class="container">
     @if(isResults)
 {   <header class="header-container">
     <h1 class="results-header-text">Your Results</h1>
@@ -38,7 +38,7 @@
    </div>
 }
 @else if (!isResults){
-    <div class="results-empty-container" role="mortgage-results-info">
+    <div class="results-empty-container" >
 
         <div>
             <img src="../../../assets/images/illustration-empty.svg" alt="">
