--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -18,6 +18,7 @@
           type="number"
           formControlName="m_amount"
           name="m_amount"
+          role="input"
 
               />
       </div>
@@ -38,6 +39,7 @@
             formControlName="m_terms"
             type="number"
             name="m_terms"
+            role="input"
           /> years
         </div>
       </label>
@@ -56,6 +58,7 @@
           formControlName="m_intRate"
           type="number"
           name="m_intRate"
+          role="input"
 
         />
         <span>%</span>
@@ -74,6 +77,7 @@
         [ngClass]="{ active: this.seletedMType === 'Repayment' }"
         (click)="getActiveType('Repayment')"
         class="form-group-radio"
+      
       >
 
           <input
@@ -83,6 +87,7 @@
             value="Repayment"
             name="m_type"
             formControlName="m_type"
+            role="input"
           />
           Repayments
         </div>
@@ -100,6 +105,7 @@
             value="Interest Only"
             name="m_type"
             formControlName="m_type"
+            role="input"
           />
           Interest Only
       
