--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -117,7 +117,7 @@
     </label>
     </div>
     <div class="form-group submit-container">
-      <button [disabled]="disableSubmit() " type="submit" class="mortgage-submit" >
+      <button [disabled]="disableSubmit() " type="submit" class="mortgage-submit"  role="button">
         <img src="../../../assets/images/iconCalculator.svg" alt="">Calculate Repayment
       </button>
     </div>
