--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -1,4 +1,4 @@
-<section class="container"  role="">
+<section class="container"  role="section">
   <header class="header-container" role="heading">
     <h1 class="header-text">Mortgage Calculator</h1>
     <a class="button-clear" (click)="resetForm()" href="" role="button">Clear All</a>
