added roles for accessibility

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -19,6 +19,7 @@
           formControlName="m_amount"
           name="m_amount"
           role="input"
+          aria-required="true"
 
               />
       </div>
@@ -40,6 +41,8 @@
             type="number"
             name="m_terms"
             role="input"
+            aria-required="true"
+            
           /> years
         </div>
       </label>
@@ -59,7 +62,7 @@
           type="number"
           name="m_intRate"
           role="input"
-
+          aria-required="true"
         />
         <span>%</span>
         </div>
@@ -88,6 +91,7 @@
             name="m_type"
             formControlName="m_type"
             role="checkbox"
+            aria-required="true"
           />
           Repayments
         </div>
