added roles for accessibility

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -1,5 +1,5 @@
 <section class="container"  role="section">
-  <header class="header-container" role="heading">
+  <header class="header-container" role="heading" aria-level="1">
     <h1 class="header-text">Mortgage Calculator</h1>
     <a class="button-clear" (click)="resetForm()" href="" role="button">Clear All</a>
   </header>
