removed form role

--- a/src/app/mortage/mortage-form/mortage-form.component.html
+++ b/src/app/mortage/mortage-form/mortage-form.component.html
@@ -4,7 +4,7 @@
     <a class="button-clear" (click)="resetForm()" href="" role="button">Clear All</a>
   </header>
 
-  <form class="mortgage-form" [formGroup]="form" (ngSubmit)="onSubmit()" role="form">
+  <form class="mortgage-form" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class=" form-group">
       
       <label for="amount" class="form-group-label">
